--- a/town_hall_1/styles/c6_main.css
+++ b/town_hall_1/styles/c6_main.css
@@ -97,6 +97,11 @@ article h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
 }
+article img {
+	float: right;
+	margin: .5em 0 1em 1em;
+	border: 1px solid black;
+}
 
 /* the styles for the aside */
 
